<resources>
    <string name="app_name">Cartrack Challenge App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="add_user">Add User</string>
    <string name="add_user_message">Username minimum length: 5\nPassword minimum length: 8</string>
    <string name="add_user_credentials_successful">Add User successful.</string>
    <string name="please_wait">Please wait…</string>
    <string name="address">Address</string>
    <string name="company">Company</string>
    <string name="see_address_on_map">See Address on Map</string>
    <string name="select_country">Select Country</string>
</resources>
